--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Random-Pets-Starter"
+rootProject.name = "RandomCats"
 include ':app'
